--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="controls">
         <div class="card">
-          <div>Time left: <strong id="timer">600</strong>s</div>
+          <div>Time left: <strong id="timer">600</strong></div>
           <div>Found: <strong id="count">0</strong>/50</div>
         </div>
       </div>
