--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div id="map-wrap">
         <!-- SVG map -->
-        <object id="us-svg" data="https://upload.wikimedia.org/wikipedia/commons/1/1a/Blank_US_Map_%28states_only%29.svg" type="image/svg+xml"></object>
+<object id="us-svg" data="us-states.svg" type="image/svg+xml"></object>
 
         <div id="found-list" aria-live="polite"></div>
       </div>
