--- a/index.html
+++ b/index.html
@@ -3,52 +3,54 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Geography Quiz — All of the United States</title>
-  <!-- Link to external CSS -->
+  <title>Geography Quiz</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <header>
-      <div>
-        <h1>Geography Quiz — All of the United States</h1>
-        <div class="info">
-          Level: <strong>All of the United States</strong> — you have <strong>10 minutes</strong> to name all 50 states (in English).
-        </div>
-      </div>
-      <div class="controls">
-        <div class="card">
-          <div>Time left: <strong id="timer">10:00</strong></div>
-          <div>Found: <strong id="count">0</strong>/50</div>
-        </div>
-      </div>
-    </header>
 
-    <section id="game" class="card">
+    <!-- ====== START MENU ====== -->
+    <section id="menu" class="card">
+      <h1>Choose a Level</h1>
+      <button class="level-btn" data-level="us">All of the United States</button>
+      <button class="level-btn" data-level="eu">All of the European Countries</button>
+    </section>
+
+    <!-- ====== GAME SECTION ====== -->
+    <section id="game" class="card hidden">
+      <header>
+        <h1 id="level-title">Geography Quiz</h1>
+        <div class="info" id="level-info"></div>
+        <div class="controls">
+          <div class="card">
+            <div>Time left: <strong id="timer">10:00</strong></div>
+            <div>Found: <strong id="count">0</strong>/<span id="total">0</span></div>
+          </div>
+        </div>
+      </header>
+
       <div class="input-row">
-        <input id="state-input" type="text" placeholder="Type a US state" autocomplete="off" autocapitalize="words">
+        <input id="state-input" type="text" placeholder="Type here..." autocomplete="off" autocapitalize="words">
         
         <button id="start-btn" class="start-game">Start Game</button>
         <button id="restart-btn" class="secondary">Restart</button>
         <button id="hint-btn" class="secondary">Reveal random</button>
         
-        <div style="margin-left:8px; color:#6b7280">(Type full state name in English)</div>
+        <div style="margin-left:8px; color:#6b7280">(Type full name in English)</div>
       </div>
 
       <div id="map-wrap">
-        <!-- SVG map -->
-<object id="us-svg" data="us-states.svg" type="image/svg+xml"></object>
-
+        <object id="map-svg" type="image/svg+xml"></object>
         <div id="found-list" aria-live="polite"></div>
       </div>
 
       <footer>
-        Tip: press Enter after typing a state. The map will color the found state in green. The page expects the official state names (e.g. "New York", "North Carolina").
+        Tip: press Enter after typing. Correct answers will color the map green.
       </footer>
     </section>
   </div>
 
-  <!-- Link to external JS -->
+  <script src="europe-countries.js"></script>
   <script src="script.js" defer></script>
 </body>
 </html>
