--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <footer>
-        Tip: press Enter after typing. Correct answers will color the map green.
+        Useful Tip: Press Enter after typing!!!
       </footer>
     </section>
   </div>
